--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,3 +4,20 @@
 
 @import "_custom";
 @import "_layout";
+
+body {
+    font-family: 'Rubik', sans-serif;
+}
+
+.nav-pills .nav-link.active {
+    background-color: #8067B2; /* Color de fondo para el enlace activo */
+    color: white;
+    border-radius: 10px;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+}
+
+h3 {
+    margin: 0;
+    font-weight: bold;
+}
