--- a/resources/sass/coreui/_variables.scss
+++ b/resources/sass/coreui/_variables.scss
@@ -40,7 +40,7 @@
 // $medium-emphasis-inverse:  rgba($white, .6) !default;
 // $disabled-inverse:         rgba($white, .38) !default;
 
-// $blue:    #0d6efd !default;
+ $blue:    #8067B2 !default;
 // $indigo:  #6610f2 !default;
 // $purple:  #6f42c1 !default;
 // $pink:    #d63384 !default;
